--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@ body {
   width: 100%;
   height: 100%;
   margin: 0;
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 audio {
@@ -29,4 +31,15 @@ img {
 a {
   text-decoration: none;
   color: inherit;
+}
+
+@media screen and (max-width: 415px) {
+  img {
+    width: 90%;
+  }
+
+  .links {
+    margin-top: -25px;
+    margin-left: -20px;
+  }
 }
